Fix InputLabel so errors don't make the page jump

--- a/client/src/auth/components/LoginForm/LoginForm.module.scss
+++ b/client/src/auth/components/LoginForm/LoginForm.module.scss
@@ -5,6 +5,6 @@
 }
 
 .form > * + * {
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
