--- a/client/src/comments/components/CreateComment/CreateComment.module.scss
+++ b/client/src/comments/components/CreateComment/CreateComment.module.scss
@@ -24,7 +24,7 @@
 .buttonWrapper {
   display: flex;
   justify-content: flex-end;
-  margin-top: 1.6rem;
+  margin-top: 1rem;
 
   & > button {
     width: 100%;
